@@ -1,2 +1,4 @@
 Daniel O'Connell <tojad99+github@gmail.com>
-Dennis Lutter <lad1337@gmail.com>
+Dennis Lutter <dennis.lutter@project-collins.com>
+P0psicles <rogier@headshots.nl>
+lad1337 <lad1337@gmail.com>
