@@ -1,2 +1,4 @@
 requests
 appdirs
+tempfile
+getpass
